--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  
+  some code here
 </head>
 <body>
-    <h1>Hello Feature branch 3 - second change</h1>
+    <h1>Hello Main 3</h1>
 </body>
 </html>
