Init Feature branch 4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   some code here and here and again
 </head>
 <body>
-    <h1>Hello Main 3</h1>
+    <h1>Hello Feature 4</h1>
 
     <h2>added some other lines</h2>
 </body>
